# clad

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
docs/: commands.md
src/clad/: __init__.py  bridge_client.py  claude_launch.py  cli.py  config.py  logger.py  paths.py  projects.py  state.py  terminal.py  tmux.py
src/clad/bridge/: __init__.py  __main__.py  idle_watcher.py  mcp.py  mcp_config.py  mcp_server.py  server.py  session_manager.py
tests/: conftest.py  test_bridge_http.py  test_claude_launch.py  test_cli_skeleton.py  test_config.py  test_mcp_config.py  test_paths.py  test_projects.py  test_state.py  test_terminal.py
